tests/ui/consts/issue-16538.stderr
error[E0015]: cannot call non-const function `Y::foo` in statics
  --> $DIR/issue-16538.rs:11:23
   |
LL | static foo: &Y::X = &*Y::foo(Y::x as *const Y::X);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/issue-16538.rs:11:22
   |
LL | static foo: &Y::X = &*Y::foo(Y::x as *const Y::X);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-16538.rs:11:30
   |
LL | static foo: &Y::X = &*Y::foo(Y::x as *const Y::X);
   |                              ^^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0133.
For more information about an error, try `rustc --explain E0015`.
